Lesson_05/dir_1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
        - name: redmine
          image: redmine:4.1.1
          ports:
            - containerPort: 3000
