Lesson_05/dir_1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine
  namespace: postgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: redminehost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: redmine
            port:
              number: 3000
